finished implementing sidebar, need links

--- a/testexternal.css
+++ b/testexternal.css
@@ -1,5 +1,6 @@
 body {
-    background-color:#800000;
+    /*background-image:url('http://cucsa.org.uk/wp-content/uploads/2015/10/Work_In_Progress.png')
+    */
 }
 h1 {
     background-color:#505050;
@@ -9,3 +10,67 @@ h2 {
     background-color:#505050;
     text-align: center;
 }
+
+.sidenav {
+    height: 100%;
+    width: 15%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.dropbtn {
+    background-color: #111;
+    color: #818181;
+    padding: 8px 8px 8px 32px;
+    font-size: 25px;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    color: #f1f1f1;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #111;
+    min-width: 160px;
+}
+
+.dropdown-content a {
+    color: #818181;
+    padding: 12px 50px;   
+}
+
+.show {display:block;}
