--- a/testexternal.css
+++ b/testexternal.css
@@ -42,35 +42,54 @@ h2 {
   .sidenav a {font-size: 18px;}
 }
 
-.side-drop {
-    background-color: #111;
-    color: #818181;
-    padding: 8px 8px 8px 32px;
-    font-size: 25px;
-    border: none;
+
+.accordion {
+    background-color: #eee;
+    color: #444;
     cursor: pointer;
-    transition: 0.5s;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: center;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
 }
 
-.side-drop:hover, .side-drop:focus {
+.active, .accordion:hover {
+    background-color: #ccc; 
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+
+.accordion2 {
+    background-color: #111;
+    color: #818181;
+    cursor: pointer;
+    padding: 8px 8px 8px 32px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 25px;
+    transition: 0.4s;
+}
+
+.active2, .accordion2:hover {
     color: #f1f1f1;
 }
 
-.side-dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.side-dropdown-content {
-    display: none;
-    position: relative;
+.panel2 {
     background-color: #111;
-    min-width: 160px;
+    max-height: 0;
+    padding-left: 10%;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
-
-.side-dropdown-content a {
-    color: #818181;
-    padding: 12px 50px;   
-}
-
-.show {display:block;}
