--- a/testexternal.css
+++ b/testexternal.css
@@ -1,6 +1,5 @@
 body {
-    /*background-image:url('http://cucsa.org.uk/wp-content/uploads/2015/10/Work_In_Progress.png')
-    */
+    background-color: #f1f1f1;
 }
 h1 {
     background-color:#505050;
@@ -62,7 +61,7 @@ h2 {
 
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: #f1f1f1;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
@@ -92,4 +91,24 @@ h2 {
     padding-left: 10%;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
+}
+
+.cube_container{
+    display: inline-block;
+    width: 350px;
+    height: 200px;
+    margin: 5px;
+    background-color: #ccc;
+}
+
+img.cube {
+    display: inline-block;
+    width: 350px;
+    height: 150px; 
+}
+
+div.description {
+    font-size: 15px;
+    padding: 15px;
+    text-align: center;
 }
