--- a/testexternal.css
+++ b/testexternal.css
@@ -1,11 +1,11 @@
 body {
     background-color: #f1f1f1;
 }
-h1 {
+h1.page {
     background-color:#505050;
     text-align: center;
 }
-h2 {
+h2.page {
     background-color:#505050;
     text-align: center;
 }
@@ -61,6 +61,7 @@ h2 {
 
 .panel {
     padding: 0 18px;
+    text-align: center;
     background-color: #f1f1f1;
     max-height: 0;
     overflow: hidden;
@@ -94,6 +95,7 @@ h2 {
 }
 
 .cube_container{
+
     display: inline-block;
     width: 350px;
     height: 200px;
@@ -102,6 +104,7 @@ h2 {
 }
 
 img.cube {
+
     display: inline-block;
     width: 350px;
     height: 150px; 
@@ -111,4 +114,66 @@ div.description {
     font-size: 15px;
     padding: 15px;
     text-align: center;
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    text-align: left;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    overflow-y: auto;
+    padding-left: 60px;
+    padding-bottom: 60px;
+    border: 1px solid #888;
+    width: 50%;
+    height: 90%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+code {
+    background-color: #f1f1f1;
+    padding-left: 30px;
+}
+
+table {
+    background-color: #f1f1f1;
+    border: 1px solid Black;
+}
+
+td {
+    border: 1px solid Black;
+}
+
+th {
+    border: 1px solid Black;
 }
