--- a/testexternal.css
+++ b/testexternal.css
@@ -1,13 +1,12 @@
 body {
     background-color: #f1f1f1;
 }
-h1.page {
-    background-color:#505050;
-    text-align: center;
-}
-h2.page {
-    background-color:#505050;
-    text-align: center;
+
+.header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*font-size: 30px;*/
 }
 
 .sidenav {
@@ -56,7 +55,7 @@ h2.page {
 }
 
 .active, .accordion:hover {
-    background-color: #ccc; 
+    background-color: #ccc;
 }
 
 .panel {
@@ -100,14 +99,14 @@ h2.page {
     width: 350px;
     height: 200px;
     margin: 5px;
-    background-color: #ccc; 
+    background-color: #ccc;
 }
 
 img.cube {
 
     display: inline-block;
     width: 350px;
-    height: 150px; 
+    height: 150px;
 }
 
 div.description {
